tests/snapshots/test_runner__tests__compiler__typecheck__record_type_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do
  let x = {
    x: 2
    y: "hello"
  }

  let z: String = x.x
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_type_2.kk:7:19
  │
7 │   let z: String = x.x
  │                   ^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Integer   |
    +---------------+-------------+
